💄 Fixed alignments, centered stuff, etc.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -200,6 +200,6 @@ body {
   min-height: 100vh;
 }
 
-main {
+main, .flex-fill-space {
   flex: 1 0 auto;
 }
